--- a/app/views/challenges/_form.html.erb
+++ b/app/views/challenges/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_for(@restaurant) do |f| %>
-  <% if @restaurant.errors.any? %>
+<%= form_for(@challenge) do |f| %>
+  <% if @challenge.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@restaurant.errors.count, "error") %> prohibited this restaurant from being saved:</h2>
+      <h2><%= pluralize(@challenge.errors.count, "error") %> prohibited this challenge from being saved:</h2>
 
       <ul>
-      <% @restaurant.errors.full_messages.each do |message| %>
+      <% @challenge.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
       </ul>
@@ -14,6 +14,14 @@
   <div class="field">
     <%= f.label :name %><br>
     <%= f.text_field :name %>
+  </div>
+  <div class="field">
+    <%= f.label :description %><br>
+    <%= f.text_area :description %>
+  </div>
+  <div class="field">
+    <%= f.label :restaurant %><br>
+    <%= f.text_field :restaurant %>
   </div>
   <div class="field">
     <%= f.label :address %><br>
@@ -30,10 +38,6 @@
   <div class="field">
     <%= f.label :zip %><br>
     <%= f.number_field :zip %>
-  </div>
-  <div class="field">
-    <%= f.label :challenge %><br>
-    <%= f.text_field :challenge %>
   </div>
   <div class="actions">
     <%= f.submit %>
