--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -6,6 +6,11 @@
 </p>
 
 <p>
+  <strong>Difficulty:</strong>
+  <%= @challenge.difficulty %>
+</p>
+
+<p>
   <strong>Description:</strong>
   <%= @challenge.description %>
 </p>
