--- a/app/views/challenges/index.html.erb
+++ b/app/views/challenges/index.html.erb
@@ -6,12 +6,13 @@
   <thead>
     <tr>
       <th>Name</th>
-      <th>Description</th>
-      <th>Restaurant</th>
-      <th>Address</th>
+      <th>Difficulty</th>
+      <!--<th>Description</th>-->
+      <!--<th>Restaurant</th>-->
+      <!--<th>Address</th>-->
       <th>City</th>
       <th>State</th>
-      <th>Zip</th>
+      <!--<th>Zip</th>-->
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -19,14 +20,15 @@
   <tbody>
     <% @challenges.each do |challenge| %>
       <tr>
-        <td><%= challenge.name %></td>
-        <td><%= challenge.description %></td>
-        <td><%= challenge.restaurant %></td>
-        <td><%= challenge.address %></td>
+        <td><%= link_to challenge.name, challenge %></td>
+        <td><%= challenge.difficulty %></td>
+        <!--<td><%#= challenge.description %></td>-->
+        <!--<td><%#= challenge.restaurant %></td>-->
+        <!--<td><%#= challenge.address %></td>-->
         <td><%= challenge.city %></td>
         <td><%= challenge.state %></td>
-        <td><%= challenge.zip %></td>
-        <td><%= link_to 'Show', challenge %></td>
+        <!--<td><%#= challenge.zip %></td>-->
+        <!--<td><%#= link_to 'Show', challenge %></td>-->
         <td><%= link_to 'Edit', edit_challenge_path(challenge) %></td>
         <td><%= link_to 'Destroy', challenge, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
