--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -25,11 +25,19 @@
   </div>
   <div class="field">
     <%= f.label :gender %><br>
-    <%= f.text_field :gender %>
+    Male<%= f.radio_button :gender, 'male' %>
+    Female<%= f.radio_button :gender, 'female' %>
   </div>
   <div class="field">
-    <%= f.label :yob %><br>
-    <%= f.number_field :yob %>
+    <%= f.label "Year of birth" %><br>
+    <%= f.select :yob, 1900.. Date.today.year %>
+  </div>
+  <div class="field">
+    <%= f.label :tos %><br>
+    <%= f.label :tos, "Yes" %>
+    <%= f.check_box :tos, { :multiple => false }, "yes", nil %>
+    <%= f.label :tos, "No" %>
+    <%= f.check_box :tos, {:multiple => false }, "no", nil %>
   </div>
   <div class="actions">
     <%= f.submit %>
