--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -25,5 +25,10 @@
   <%= @user.yob %>
 </p>
 
+<p>
+  <strong>Tos:</strong>
+  <%= @user.tos %>
+</p>
+
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
