added links for users and challenges

--- a/app/views/challenges/index.html.erb
+++ b/app/views/challenges/index.html.erb
@@ -38,4 +38,6 @@
 
 <br>
 
-<%= link_to 'New Challenge', new_challenge_path %>
+<%= link_to 'New Challenge', new_challenge_path %><br><br>
+<%= link_to 'List Users', users_path %>
+
