--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -32,4 +32,5 @@
 
 <br>
 
-<%= link_to 'New User', new_user_path %>
+<%= link_to 'New User', new_user_path %><br><br>
+<%= link_to 'See Challenges', challenges_path %>
