--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,16 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  
+<div>
+    <% if user_signed_in? %>
+        Hello, <%=  current_user.email %> <%= link_to "Edit Account", edit_user_registration_path %><br>
+        Not <%= current_user.email %>? <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
+    <% else %>
+        Have an account? <%= link_to "Sign in", new_user_session_path %><br>
+        Need an account? <%= link_to "Sign up", new_user_registration_path %>
+    <% end %>
+</div>
 
 <%= yield %>
 
