--- a/app/views/challenges/index.html.erb
+++ b/app/views/challenges/index.html.erb
@@ -7,12 +7,8 @@
     <tr>
       <th>Name</th>
       <th>Difficulty</th>
-      <!--<th>Description</th>-->
-      <!--<th>Restaurant</th>-->
-      <!--<th>Address</th>-->
       <th>City</th>
       <th>State</th>
-      <!--<th>Zip</th>-->
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -22,13 +18,8 @@
       <tr>
         <td><%= link_to challenge.name, challenge %></td>
         <td><%= challenge.difficulty %></td>
-        <!--<td><%#= challenge.description %></td>-->
-        <!--<td><%#= challenge.restaurant %></td>-->
-        <!--<td><%#= challenge.address %></td>-->
         <td><%= challenge.city %></td>
         <td><%= challenge.state %></td>
-        <!--<td><%#= challenge.zip %></td>-->
-        <!--<td><%#= link_to 'Show', challenge %></td>-->
         <td><%= link_to 'Edit', edit_challenge_path(challenge) %></td>
         <td><%= link_to 'Destroy', challenge, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
@@ -36,7 +27,14 @@
   </tbody>
 </table>
 
-<br>
+<br><br>
+
+<p>Current users</p>
+<% @users.each do |user| %>
+  <li><%= user.email %></li>
+<% end %>
+
+<br><br>
 
 <%= link_to 'New Challenge', new_challenge_path %><br><br>
 
