--- a/app/views/challenges/index.html.erb
+++ b/app/views/challenges/index.html.erb
@@ -9,6 +9,7 @@
       <th>Difficulty</th>
       <th>City</th>
       <th>State</th>
+      <th>Id</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -20,6 +21,7 @@
         <td><%= challenge.difficulty %></td>
         <td><%= challenge.city %></td>
         <td><%= challenge.state %></td>
+        <td><%= challenge.id %></td>
         <td><%= link_to 'Edit', edit_challenge_path(challenge) %></td>
         <td><%= link_to 'Destroy', challenge, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
