--- a/app/views/user_specific/add.html.erb
+++ b/app/views/user_specific/add.html.erb
@@ -10,7 +10,7 @@
             <th>Select</th>
         </thead>
     <tbody>
-    <%= form_for(current_user, url: user_specific_create_path, method: :patch) do |f| %>
+    <%= form_for(current_user, url: user_specific_create_path, method: :post) do |f| %>
         <% Challenge.all.each do |c|%>
             <% unless current_user.challenge_ids.include?(c.id) %>
             <tr>
