--- a/app/views/user_specific/add.html.erb
+++ b/app/views/user_specific/add.html.erb
@@ -1,36 +1,5 @@
-<div>
-    <h1><%= current_user.email %></h1>
-    <h1><%= current_user.id %></h1>
-    
-    <table border=1>
-        <thead>
-            <th>Challenge name</th>
-            <th>Challenge id</th>
-            <th>Difficulty</th>
-            <th>Select</th>
-        </thead>
-    <tbody>
-    <%= form_for(current_user, url: user_specific_create_path, method: :post) do |f| %>
-        <% Challenge.all.each do |c|%>
-            <% unless current_user.challenge_ids.include?(c.id) %>
-            <tr>
-                <td><%= c.name %></td>
-                <td><%= c.id %></td>
-                <td><%= c.difficulty %></td>
-                <td><%= radio_button_tag :challenge_ids, c.id %></td>
-            </tr>
-            <% end %>
-        <% end %>
-        </tbody>
-    </table><br>
-    <div class="actions">
-        <%= f.submit 'Add completed challenge' %>
-    </div>
-    <% end %>
-
-    <br>
-    <br>
-    <p>Find me in app/views/user_specific/add.html.erb</p>      
-</div>
+<h1>Add completed challenges</h1>
+<%= render 'form' %>
+<%= link_to 'Back', users_path %>
 
 
