--- a/app/views/shoutouts/_form.html.erb
+++ b/app/views/shoutouts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(current_user, url: new_shoutout_path, method: :post) %>
+<%= form_for(@shoutout) do |f| %>
   <div class="field">
     <%= f.label :content %><br>
     <%= f.text_area :content %>
