--- a/app/views/user_specific/profile.html.erb
+++ b/app/views/user_specific/profile.html.erb
@@ -24,22 +24,24 @@
         <% end %>
         </tbody>
         </table>
-        <p>Add another challenge!. <%= link_to "Add Completed challenges", user_specific_add_path %></p>
     <% end %>
+        <p>Add another challenge!. <%= link_to "Add Completed challenges", user_specific_add_path %></p>
 </div>
 
 <br>
+
 <div>
-    <h3><% "#{@user.user_name}'s shoutout posts" %></h3>
+    <h3><%= "#{@user.user_name}'s shoutout posts" %></h3>
+    <h1>@user before <%= @user.shoutout_ids %></h5>
     <% if @user.shoutout_ids.empty? %>
+        <h1>@user if <%= JSON.pretty_generate(JSON.parse(@user.shoutout_ids.to_json())) %></h5>
         <p>You have not made any Shoutouts yet. <%= link_to "Make a Shoutout", new_shoutout_path %></p>
     <% else %>
-         <% Shoutout.all.each do |c|%>
-             <% @user.shoutout_ids.include?(c.id)%>
-         <p><% c.content %> || Created: <% c.created_at.date %> ||
-         <%= link_to 'Delete Shoutout', c, method: :delete, data: { confirm: 'Are you sure?' } %>
-         </p>
-         <% end %>
+        <% @shoutouts.each do |c| %>
+             <% if @user.shoutout_ids.include?(c.id) %>
+                 <p>WHAT THE FUCK!</p>
+             <% end %>
+        <% end %>
     <% end %>
     <p><%= link_to "Make another shoutout", new_shoutout_path %></p>
 </div>
