--- a/app/views/user_specific/newshout.html.erb
+++ b/app/views/user_specific/newshout.html.erb
@@ -1,5 +1,5 @@
 <h2><% "#{current_user.user_name}" %> Make a new shoutout</h2>
 
-<%= render 'form' %>
+<%= render 'formshout' %>
 
 <%= link_to 'Back', @user %>
